<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/app_background"
	android:padding="20dp"
	tools:context=".EditProfileActivity">
	
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		
		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			
			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/tv_profile_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/profile_name_label"
				android:textSize="20sp"
				android:textStyle="bold"
				android:textColor="@android:color/white"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"/>
			
			<androidx.appcompat.widget.AppCompatEditText
				android:id="@+id/et_profile_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/profile_input_background"
				android:textSize="20sp"
				android:hint="@string/profile_name_hint"
				android:textColor="@android:color/white"
				android:textColorHint="@android:color/white"
				android:padding="15dp"
				android:layout_marginTop="16dp"
				android:drawableStart="@drawable/ic_person_black_24dp"
				android:drawablePadding="10dp"
				android:inputType="text"
				app:layout_constraintTop_toBottomOf="@id/tv_profile_name"
				app:layout_constraintStart_toStartOf="@id/tv_profile_name"/>
			
			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/tv_profile_email"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/profile_email_label"
				android:textSize="20sp"
				android:textStyle="bold"
				android:textColor="@android:color/white"
				android:layout_marginTop="16dp"
				app:layout_constraintStart_toStartOf="@id/et_profile_name"
				app:layout_constraintTop_toBottomOf="@id/et_profile_name"/>
			
			<androidx.appcompat.widget.AppCompatEditText
				android:id="@+id/et_profile_email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/profile_input_background"
				android:textSize="20sp"
				android:hint="@string/profile_email_hint"
				android:textColor="@android:color/white"
				android:textColorHint="@android:color/white"
				android:padding="15dp"
				android:layout_marginTop="16dp"
				android:inputType="textEmailAddress"
				android:drawableStart="@drawable/ic_mail_black_24dp"
				android:drawablePadding="10dp"
				app:layout_constraintTop_toBottomOf="@id/tv_profile_email"
				app:layout_constraintStart_toStartOf="@id/tv_profile_email"/>
			
			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/tv_profile_age"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/profile_age_label"
				android:textSize="20sp"
				android:textStyle="bold"
				android:textColor="@android:color/white"
				android:layout_marginTop="16dp"
				app:layout_constraintStart_toStartOf="@id/et_profile_email"
				app:layout_constraintTop_toBottomOf="@id/et_profile_email"/>
			
			<androidx.appcompat.widget.AppCompatEditText
				android:id="@+id/et_profile_age"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/profile_input_background"
				android:textSize="20sp"
				android:hint="@string/profile_age_hint"
				android:textColor="@android:color/white"
				android:textColorHint="@android:color/white"
				android:padding="15dp"
				android:layout_marginTop="16dp"
				android:drawableStart="@drawable/ic_accessibility_black_24dp"
				android:drawablePadding="10dp"
				android:inputType="number"
				app:layout_constraintTop_toBottomOf="@id/tv_profile_age"
				app:layout_constraintStart_toStartOf="@id/tv_profile_age"/>
			
			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/tv_profile_phone"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/profile_phone_label"
				android:textSize="20sp"
				android:textStyle="bold"
				android:textColor="@android:color/white"
				android:layout_marginTop="16dp"
				app:layout_constraintStart_toStartOf="@id/et_profile_age"
				app:layout_constraintTop_toBottomOf="@id/et_profile_age"/>
			
			<androidx.appcompat.widget.AppCompatEditText
				android:id="@+id/et_profile_phone"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/profile_input_background"
				android:textSize="20sp"
				android:hint="@string/profile_phone_hint"
				android:textColor="@android:color/white"
				android:textColorHint="@android:color/white"
				android:padding="15dp"
				android:layout_marginTop="16dp"
				android:drawableStart="@drawable/ic_phone_iphone_black_24dp"
				android:drawablePadding="10dp"
				android:inputType="phone"
				app:layout_constraintTop_toBottomOf="@id/tv_profile_phone"
				app:layout_constraintStart_toStartOf="@id/tv_profile_phone"/>
			
			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/tv_profile_bodyweight"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/profile_bodyweight_label"
				android:textSize="20sp"
				android:textStyle="bold"
				android:textColor="@android:color/white"
				android:layout_marginTop="16dp"
				app:layout_constraintStart_toStartOf="@id/et_profile_phone"
				app:layout_constraintTop_toBottomOf="@id/et_profile_phone"/>
			
			<androidx.appcompat.widget.AppCompatEditText
				android:id="@+id/et_profile_bodyweight"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/profile_input_background"
				android:textSize="20sp"
				android:hint="@string/profile_bodyweighte_hint"
				android:textColor="@android:color/white"
				android:textColorHint="@android:color/white"
				android:padding="15dp"
				android:layout_marginTop="16dp"
				android:drawableStart="@drawable/ic_accessibility_black_24dp"
				android:drawablePadding="10dp"
				android:inputType="numberDecimal"
				app:layout_constraintTop_toBottomOf="@id/tv_profile_bodyweight"
				app:layout_constraintStart_toStartOf="@id/tv_profile_bodyweight"/>
			
			
			<androidx.appcompat.widget.AppCompatButton
				android:id="@+id/button_login"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/profile_save_button"
				android:padding="10dp"
				android:textSize="20sp"
				android:textColor="@android:color/white"
				android:background="@color/colorPrimary"
				app:layout_constraintTop_toBottomOf="@+id/et_profile_bodyweight"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				android:layout_marginTop="20dp"/>
		</androidx.constraintlayout.widget.ConstraintLayout>
		
	</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>