<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	
	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/tv_name_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		android:text="@string/name_field_label"
		android:textSize="25sp"/>
	
	<androidx.appcompat.widget.AppCompatEditText
		android:id="@+id/et_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toBottomOf="@+id/tv_name_label"
		android:hint="@string/name_in_english_language"
		app:layout_constraintStart_toStartOf="@id/tv_name_label"/>
	
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/btn_submit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/submit_button_text"
		android:textColor="@android:color/white"
		android:background="@color/output_bg"
		app:layout_constraintTop_toBottomOf="@+id/et_name"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"/>

	<androidx.constraintlayout.widget.Group
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/group_input"
		android:visibility="visible"
		app:constraint_referenced_ids="tv_name_label, et_name"/>

	
	
</androidx.constraintlayout.widget.ConstraintLayout>