<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="25dp"
	android:background="@drawable/app_background"
	tools:context=".ProfileActivity">
	
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		
		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			
			<androidx.appcompat.widget.AppCompatImageView
				android:id="@+id/iv_profile_image"
				android:layout_width="200dp"
				android:layout_height="200dp"
				android:src="@drawable/rahim"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="parent"/>
			
			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/tv_get_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/profile_name_label"
				android:textColor="@android:color/white"
				android:textSize="20sp"
				android:textStyle="bold"
				app:layout_constraintTop_toBottomOf="@id/iv_profile_image"
				app:layout_constraintStart_toStartOf="parent"
				android:layout_marginStart="4dp"
				android:layout_marginTop="20dp"/>
			
			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/tv_get_email"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/profile_email_label"
				android:textColor="@android:color/white"
				android:textSize="20sp"
				android:textStyle="bold"
				app:layout_constraintTop_toBottomOf="@id/tv_get_name"
				app:layout_constraintStart_toStartOf="@id/tv_get_name"
				android:layout_marginTop="16dp"/>
			
			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/tv_get_age"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/profile_age_label"
				android:textColor="@android:color/white"
				android:textSize="20sp"
				android:textStyle="bold"
				app:layout_constraintTop_toBottomOf="@id/tv_get_email"
				app:layout_constraintStart_toStartOf="@id/tv_get_email"
				android:layout_marginTop="16dp"/>
			
			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/tv_get_phone"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/profile_phone_label"
				android:textColor="@android:color/white"
				android:textSize="20sp"
				android:textStyle="bold"
				app:layout_constraintTop_toBottomOf="@id/tv_get_age"
				app:layout_constraintStart_toStartOf="@id/tv_get_age"
				android:layout_marginTop="16dp"/>
			
			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/tv_get_bodyweight"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/profile_bodyweight_label"
				android:textColor="@android:color/white"
				android:textSize="20sp"
				android:textStyle="bold"
				app:layout_constraintTop_toBottomOf="@id/tv_get_phone"
				app:layout_constraintStart_toStartOf="@id/tv_get_phone"
				android:layout_marginTop="16dp"/>
			
		</androidx.constraintlayout.widget.ConstraintLayout>
		
	</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>